--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,16 +4,13 @@
 
 <div class="jumbotron text-center">
   <div class="container">
-    <a href="/" class="lang-logo">
-      <img src="/lang-logo.png">
-    </a>
     <h1>Mapp 2 REST-API</h1>
     <div class="container">
       <p>Documentation of REST-API</p>
       <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#restapi">View REST-API</button>
     </div>
     <div id="restapi" class="container collapse">
-      Nothing here yet...
+      <p>Nothing here yet...</p>
     </div>
   </div>
 </div>
